cmake_minimum_required(VERSION 3.15)
project(RIVE4JUCE VERSION 1.0.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Include FetchContent module
include(FetchContent)

# Fetch JUCE from GitHub
FetchContent_Declare(
        juce
        GIT_REPOSITORY https://github.com/juce-framework/JUCE.git
        GIT_TAG 7.0.9  # Use a specific stable version
)
FetchContent_MakeAvailable(juce)

# Fetch Rive runtime
FetchContent_Declare(
        rive
        GIT_REPOSITORY https://github.com/seclorum/rive-cpp-legacy.git
#        GIT_TAG v0.1.0  # Use a specific version; adjust as needed
)
FetchContent_MakeAvailable(rive)

# Define Rive paths using fetched content
set(RIVE_SOURCE_DIR ${rive_SOURCE_DIR})
set(RIVE_CPP_INCLUDE_DIR "${RIVE_SOURCE_DIR}/include")
set(RIVE_RENDERER_INCLUDE_DIR "${RIVE_SOURCE_DIR}/renderer/include")
set(RIVE_RENDERER_SRC_DIR "${RIVE_SOURCE_DIR}/renderer/src")


# Build Rive as a static library
add_library(rive_static STATIC
        "${RIVE_SOURCE_DIR}/src/generated/nested_artboard_layout_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/viewmodel/viewmodel_instance_list_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/viewmodel/viewmodel_instance_enum_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/viewmodel/viewmodel_property_color_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/viewmodel/viewmodel_property_number_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/viewmodel/viewmodel_property_enum_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/viewmodel/data_enum_value_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/viewmodel/viewmodel_instance_boolean_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/viewmodel/viewmodel_property_list_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/viewmodel/viewmodel_instance_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/viewmodel/viewmodel_property_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/viewmodel/viewmodel_property_boolean_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/viewmodel/viewmodel_property_string_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/viewmodel/viewmodel_instance_list_item_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/viewmodel/viewmodel_instance_color_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/viewmodel/viewmodel_instance_number_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/viewmodel/viewmodel_property_viewmodel_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/viewmodel/viewmodel_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/viewmodel/data_enum_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/viewmodel/viewmodel_instance_viewmodel_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/viewmodel/viewmodel_component_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/viewmodel/viewmodel_instance_string_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/draw_target_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/backboard_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/constraints/follow_path_constraint_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/constraints/distance_constraint_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/constraints/translation_constraint_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/constraints/ik_constraint_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/constraints/scale_constraint_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/constraints/transform_constraint_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/constraints/rotation_constraint_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/layout/n_slicer_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/layout/axis_y_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/layout/axis_x_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/layout/layout_component_style_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/layout/n_slicer_tile_mode_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/audio_event_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/nested_artboard_leaf_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/layout_component_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/any_state_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/nested_state_machine_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/elastic_interpolator_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/state_machine_fire_event_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/transition_value_enum_comparator_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/transition_property_artboard_comparator_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/transition_value_boolean_comparator_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/blend_state_1d_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/state_machine_trigger_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/state_machine_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/listener_trigger_change_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/exit_state_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/listener_bool_change_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/listener_viewmodel_change_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/transition_value_string_comparator_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/listener_number_change_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/state_machine_fire_event.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/state_machine_number_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/state_transition_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/keyframe_double_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/transition_value_color_comparator_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/state_machine_bool_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/blend_state_transition_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/blend_animation_direct_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/transition_viewmodel_condition_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/transition_bool_condition_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/listener_align_target_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/nested_number_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/keyframe_string_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/transition_trigger_condition_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/transition_number_condition_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/keyframe_uint_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/keyframe_callback_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/nested_simple_animation_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/nested_trigger_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/listener_fire_event_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/linear_animation_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/transition_value_number_comparator_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/entry_state_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/transition_artboard_condition_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/blend_state_direct_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/state_machine_layer_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/cubic_interpolator_component_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/blend_animation_1d_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/keyed_object_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/transition_property_viewmodel_comparator_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/keyframe_id_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/state_machine_listener_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/cubic_value_interpolator_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/nested_bool_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/keyframe_color_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/keyframe_bool_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/keyed_property_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/cubic_ease_interpolator_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/nested_remap_animation_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/animation_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/animation/animation_state_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/straight_vertex_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/paint/radial_gradient_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/paint/gradient_stop_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/paint/solid_color_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/paint/trim_path_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/paint/linear_gradient_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/paint/stroke_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/paint/fill_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/polygon_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/cubic_detached_vertex_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/clipping_shape_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/mesh_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/rectangle_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/cubic_mirrored_vertex_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/star_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/mesh_vertex_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/ellipse_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/points_path_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/triangle_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/shape_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/cubic_asymmetric_vertex_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/contour_mesh_vertex_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/shapes/image_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/custom_property_number_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/nested_artboard_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/custom_property_boolean_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/artboard_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/draw_rules_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/data_bind/bindable_property_enum_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/data_bind/data_bind_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/data_bind/bindable_property_boolean_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/data_bind/converters/data_converter_rounder_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/data_bind/converters/data_converter_group_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/data_bind/converters/data_converter_operation_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/data_bind/converters/data_converter_group_item_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/data_bind/converters/data_converter_to_string_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/data_bind/data_bind_context_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/data_bind/bindable_property_color_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/data_bind/bindable_property_string_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/data_bind/bindable_property_number_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/custom_property_string_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/bones/tendon_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/bones/skin_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/bones/bone_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/bones/weight_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/bones/root_bone_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/bones/cubic_weight_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/text/text_modifier_group_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/text/text_style_axis_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/text/text_style_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/text/text_modifier_range_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/text/text_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/text/text_variation_modifier_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/text/text_style_feature_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/text/text_value_run_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/open_url_event_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/node_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/assets/file_asset_contents_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/assets/folder_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/assets/audio_asset_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/assets/font_asset_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/assets/image_asset_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/event_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/solo_base.cpp"
        "${RIVE_SOURCE_DIR}/src/generated/joystick_base.cpp"
        "${RIVE_SOURCE_DIR}/src/viewmodel/viewmodel_instance_color.cpp"
        "${RIVE_SOURCE_DIR}/src/viewmodel/viewmodel_instance_list_item.cpp"
        "${RIVE_SOURCE_DIR}/src/viewmodel/viewmodel.cpp"
        "${RIVE_SOURCE_DIR}/src/viewmodel/viewmodel_instance_boolean.cpp"
        "${RIVE_SOURCE_DIR}/src/viewmodel/viewmodel_instance_string.cpp"
        "${RIVE_SOURCE_DIR}/src/viewmodel/viewmodel_property.cpp"
        "${RIVE_SOURCE_DIR}/src/viewmodel/data_enum.cpp"
        "${RIVE_SOURCE_DIR}/src/viewmodel/viewmodel_instance_list.cpp"
        "${RIVE_SOURCE_DIR}/src/viewmodel/viewmodel_instance_enum.cpp"
        "${RIVE_SOURCE_DIR}/src/viewmodel/viewmodel_property_enum.cpp"
        "${RIVE_SOURCE_DIR}/src/viewmodel/viewmodel_instance_value.cpp"
        "${RIVE_SOURCE_DIR}/src/viewmodel/viewmodel_instance.cpp"
        "${RIVE_SOURCE_DIR}/src/viewmodel/viewmodel_instance_viewmodel.cpp"
        "${RIVE_SOURCE_DIR}/src/viewmodel/viewmodel_instance_number.cpp"
        "${RIVE_SOURCE_DIR}/src/viewmodel/data_enum_value.cpp"
        "${RIVE_SOURCE_DIR}/src/draw_rules.cpp"
        "${RIVE_SOURCE_DIR}/src/core/field_types/core_bool_type.cpp"
        "${RIVE_SOURCE_DIR}/src/core/field_types/core_bytes_type.cpp"
        "${RIVE_SOURCE_DIR}/src/core/field_types/core_uint_type.cpp"
        "${RIVE_SOURCE_DIR}/src/core/field_types/core_double_type.cpp"
        "${RIVE_SOURCE_DIR}/src/core/field_types/core_string_type.cpp"
        "${RIVE_SOURCE_DIR}/src/core/field_types/core_color_type.cpp"
        "${RIVE_SOURCE_DIR}/src/core/binary_data_reader.cpp"
        "${RIVE_SOURCE_DIR}/src/core/binary_reader.cpp"
        "${RIVE_SOURCE_DIR}/src/core/binary_writer.cpp"
        "${RIVE_SOURCE_DIR}/src/scene.cpp"
        "${RIVE_SOURCE_DIR}/src/simple_array.cpp"
        "${RIVE_SOURCE_DIR}/src/nested_artboard.cpp"
        "${RIVE_SOURCE_DIR}/src/constraints/transform_constraint.cpp"
        "${RIVE_SOURCE_DIR}/src/constraints/distance_constraint.cpp"
        "${RIVE_SOURCE_DIR}/src/constraints/follow_path_constraint.cpp"
        "${RIVE_SOURCE_DIR}/src/constraints/constraint.cpp"
        "${RIVE_SOURCE_DIR}/src/constraints/rotation_constraint.cpp"
        "${RIVE_SOURCE_DIR}/src/constraints/ik_constraint.cpp"
        "${RIVE_SOURCE_DIR}/src/constraints/scale_constraint.cpp"
        "${RIVE_SOURCE_DIR}/src/constraints/targeted_constraint.cpp"
        "${RIVE_SOURCE_DIR}/src/constraints/translation_constraint.cpp"
        "${RIVE_SOURCE_DIR}/src/hittest_command_path.cpp"
        "${RIVE_SOURCE_DIR}/src/transform_component.cpp"
        "${RIVE_SOURCE_DIR}/src/importers/transition_viewmodel_condition_importer.cpp"
        "${RIVE_SOURCE_DIR}/src/importers/artboard_importer.cpp"
        "${RIVE_SOURCE_DIR}/src/importers/state_machine_importer.cpp"
        "${RIVE_SOURCE_DIR}/src/importers/linear_animation_importer.cpp"
        "${RIVE_SOURCE_DIR}/src/importers/layer_state_importer.cpp"
        "${RIVE_SOURCE_DIR}/src/importers/viewmodel_instance_importer.cpp"
        "${RIVE_SOURCE_DIR}/src/importers/enum_importer.cpp"
        "${RIVE_SOURCE_DIR}/src/importers/keyed_object_importer.cpp"
        "${RIVE_SOURCE_DIR}/src/importers/backboard_importer.cpp"
        "${RIVE_SOURCE_DIR}/src/importers/bindable_property_importer.cpp"
        "${RIVE_SOURCE_DIR}/src/importers/file_asset_importer.cpp"
        "${RIVE_SOURCE_DIR}/src/importers/state_machine_layer_component_importer.cpp"
        "${RIVE_SOURCE_DIR}/src/importers/data_converter_group_importer.cpp"
        "${RIVE_SOURCE_DIR}/src/importers/viewmodel_instance_list_importer.cpp"
        "${RIVE_SOURCE_DIR}/src/importers/state_transition_importer.cpp"
        "${RIVE_SOURCE_DIR}/src/importers/state_machine_layer_importer.cpp"
        "${RIVE_SOURCE_DIR}/src/importers/state_machine_listener_importer.cpp"
        "${RIVE_SOURCE_DIR}/src/importers/viewmodel_importer.cpp"
        "${RIVE_SOURCE_DIR}/src/importers/keyed_property_importer.cpp"
        "${RIVE_SOURCE_DIR}/src/nested_artboard_layout.cpp"
        "${RIVE_SOURCE_DIR}/src/component.cpp"
        "${RIVE_SOURCE_DIR}/src/layout/layout_component_style.cpp"
        "${RIVE_SOURCE_DIR}/src/node.cpp"
        "${RIVE_SOURCE_DIR}/src/layout.cpp"
        "${RIVE_SOURCE_DIR}/src/layout_component.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/transition_value_string_comparator.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/cubic_interpolator_solver.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/nested_trigger.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/keyframe_color.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/keyframe_callback.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/blend_animation.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/listener_number_change.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/state_machine_instance.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/keyframe_interpolator.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/transition_input_condition.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/nested_bool.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/blend_state_direct.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/animation_state.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/nested_animation.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/keyframe_uint.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/transition_trigger_condition.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/state_machine_listener.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/keyed_object.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/nested_state_machine.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/animation_reset_factory.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/interpolating_keyframe.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/state_machine.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/nested_linear_animation.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/blend_state_1d_instance.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/state_machine_input_instance.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/transition_viewmodel_condition.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/keyframe_bool.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/animation_state_instance.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/nested_simple_animation.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/transition_condition.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/elastic_interpolator.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/linear_animation.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/transition_comparator.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/blend_state_direct_instance.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/elastic_ease.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/linear_animation_instance.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/keyframe_double.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/listener_input_change.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/blend_animation_direct.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/transition_property_comparator.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/cubic_ease_interpolator.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/blend_state_transition.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/nested_number.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/transition_property_artboard_comparator.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/transition_number_condition.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/listener_bool_change.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/keyframe.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/listener_action.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/blend_state.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/listener_fire_event.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/state_machine_layer.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/listener_align_target.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/blend_animation_1d.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/transition_value_enum_comparator.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/blend_state_1d.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/cubic_value_interpolator.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/cubic_interpolator_component.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/state_instance.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/transition_value_color_comparator.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/listener_trigger_change.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/transition_value_boolean_comparator.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/cubic_interpolator.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/keyed_property.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/transition_bool_condition.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/state_machine_input.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/animation_reset.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/nested_remap_animation.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/layer_state.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/transition_value_number_comparator.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/system_state_instance.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/state_transition.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/listener_viewmodel_change.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/transition_property_viewmodel_comparator.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/keyframe_string.cpp"
        "${RIVE_SOURCE_DIR}/src/animation/keyframe_id.cpp"
        "${RIVE_SOURCE_DIR}/src/drawable.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/paint/solid_color.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/paint/linear_gradient.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/paint/shape_paint.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/paint/fill.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/paint/radial_gradient.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/paint/color.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/paint/trim_path.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/paint/shape_paint_mutator.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/paint/gradient_stop.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/paint/stroke.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/points_path.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/star.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/mesh.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/cubic_asymmetric_vertex.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/image.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/cubic_detached_vertex.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/mesh_vertex.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/cubic_vertex.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/shape.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/triangle.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/polygon.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/path.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/parametric_path.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/path_vertex.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/rectangle.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/straight_vertex.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/path_composer.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/shape_paint_container.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/cubic_mirrored_vertex.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/vertex.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/ellipse.cpp"
        "${RIVE_SOURCE_DIR}/src/shapes/clipping_shape.cpp"
        "${RIVE_SOURCE_DIR}/src/math/contour_measure.cpp"
        "${RIVE_SOURCE_DIR}/src/math/raw_path.cpp"
        "${RIVE_SOURCE_DIR}/src/math/bit_field_loc.cpp"
        "${RIVE_SOURCE_DIR}/src/math/aabb.cpp"
        "${RIVE_SOURCE_DIR}/src/math/mat2d_find_max_scale.cpp"
        "${RIVE_SOURCE_DIR}/src/math/hit_test.cpp"
        "${RIVE_SOURCE_DIR}/src/math/raw_path_utils.cpp"
        "${RIVE_SOURCE_DIR}/src/math/vec2d.cpp"
        "${RIVE_SOURCE_DIR}/src/math/mat2d.cpp"
        "${RIVE_SOURCE_DIR}/src/dependency_sorter.cpp"
        "${RIVE_SOURCE_DIR}/src/artboard.cpp"
        "${RIVE_SOURCE_DIR}/src/world_transform_component.cpp"
        "${RIVE_SOURCE_DIR}/src/draw_target.cpp"
        "${RIVE_SOURCE_DIR}/src/audio/audio_reader.cpp"
        "${RIVE_SOURCE_DIR}/src/audio/audio_engine.cpp"
        "${RIVE_SOURCE_DIR}/src/audio/audio_source.cpp"
        "${RIVE_SOURCE_DIR}/src/audio/audio_sound.cpp"
        "${RIVE_SOURCE_DIR}/src/container_component.cpp"
        "${RIVE_SOURCE_DIR}/src/file.cpp"
        "${RIVE_SOURCE_DIR}/src/data_bind/data_bind_context.cpp"
        "${RIVE_SOURCE_DIR}/src/data_bind/context/context_value_list.cpp"
        "${RIVE_SOURCE_DIR}/src/data_bind/context/context_value_number.cpp"
        "${RIVE_SOURCE_DIR}/src/data_bind/context/context_value_enum.cpp"
        "${RIVE_SOURCE_DIR}/src/data_bind/context/context_value_string.cpp"
        "${RIVE_SOURCE_DIR}/src/data_bind/context/context_value_list_item.cpp"
        "${RIVE_SOURCE_DIR}/src/data_bind/context/context_value_color.cpp"
        "${RIVE_SOURCE_DIR}/src/data_bind/context/context_value.cpp"
        "${RIVE_SOURCE_DIR}/src/data_bind/context/context_value_boolean.cpp"
        "${RIVE_SOURCE_DIR}/src/data_bind/data_bind.cpp"
        "${RIVE_SOURCE_DIR}/src/data_bind/converters/data_converter.cpp"
        "${RIVE_SOURCE_DIR}/src/data_bind/converters/data_converter_to_string.cpp"
        "${RIVE_SOURCE_DIR}/src/data_bind/converters/data_converter_operation.cpp"
        "${RIVE_SOURCE_DIR}/src/data_bind/converters/data_converter_group_item.cpp"
        "${RIVE_SOURCE_DIR}/src/data_bind/converters/data_converter_rounder.cpp"
        "${RIVE_SOURCE_DIR}/src/data_bind/converters/data_converter_group.cpp"
        "${RIVE_SOURCE_DIR}/src/data_bind/data_context.cpp"
        "${RIVE_SOURCE_DIR}/src/bones/root_bone.cpp"
        "${RIVE_SOURCE_DIR}/src/bones/bone.cpp"
        "${RIVE_SOURCE_DIR}/src/bones/skinnable.cpp"
        "${RIVE_SOURCE_DIR}/src/bones/weight.cpp"
        "${RIVE_SOURCE_DIR}/src/bones/skin.cpp"
        "${RIVE_SOURCE_DIR}/src/bones/tendon.cpp"
        "${RIVE_SOURCE_DIR}/src/text/text.cpp"
        "${RIVE_SOURCE_DIR}/src/text/text_style_axis.cpp"
        "${RIVE_SOURCE_DIR}/src/text/text_modifier_group.cpp"
        "${RIVE_SOURCE_DIR}/src/text/text_variation_modifier.cpp"
        "${RIVE_SOURCE_DIR}/src/text/glyph_lookup.cpp"
        "${RIVE_SOURCE_DIR}/src/text/font_hb.cpp"
        "${RIVE_SOURCE_DIR}/src/text/text_modifier.cpp"
        "${RIVE_SOURCE_DIR}/src/text/line_breaker.cpp"
        "${RIVE_SOURCE_DIR}/src/text/text_style.cpp"
        "${RIVE_SOURCE_DIR}/src/text/text_style_feature.cpp"
        "${RIVE_SOURCE_DIR}/src/text/text_value_run.cpp"
        "${RIVE_SOURCE_DIR}/src/text/utf.cpp"
        "${RIVE_SOURCE_DIR}/src/text/raw_text.cpp"
        "${RIVE_SOURCE_DIR}/src/text/text_modifier_range.cpp"
        "${RIVE_SOURCE_DIR}/src/event.cpp"
        "${RIVE_SOURCE_DIR}/src/factory.cpp"
        "${RIVE_SOURCE_DIR}/src/assets/audio_asset.cpp"
        "${RIVE_SOURCE_DIR}/src/assets/image_asset.cpp"
        "${RIVE_SOURCE_DIR}/src/assets/font_asset.cpp"
        "${RIVE_SOURCE_DIR}/src/assets/file_asset_contents.cpp"
        "${RIVE_SOURCE_DIR}/src/assets/file_asset_referencer.cpp"
        "${RIVE_SOURCE_DIR}/src/assets/file_asset.cpp"
        "${RIVE_SOURCE_DIR}/src/joystick.cpp"
        "${RIVE_SOURCE_DIR}/src/solo.cpp"
        "${RIVE_SOURCE_DIR}/src/static_scene.cpp"
        "${RIVE_SOURCE_DIR}/src/renderer.cpp"
        "${RIVE_SOURCE_DIR}/src/audio_event.cpp"
        "${RIVE_SOURCE_DIR}/src/nested_artboard_leaf.cpp"
)



target_include_directories(rive_static PUBLIC
        ${RIVE_CPP_INCLUDE_DIR}
        ${RIVE_RENDERER_INCLUDE_DIR}
        ${RIVE_RENDERER_SRC_DIR}
)

# Add the plugin
juce_add_plugin(RIVE4JUCE
        COMPANY_NAME "DemoCorp"
        PLUGIN_MANUFACTURER_CODE "Rive"
        PLUGIN_CODE "R4JD"
        FORMATS VST3 Standalone
        PRODUCT_NAME "RIVE4JUCE"
)

juce_generate_juce_header(RIVE4JUCE)

target_sources(RIVE4JUCE
        PRIVATE
        Source/PluginProcessor.cpp
        Source/PluginEditor.cpp
        Source/RiveRenderer.cpp
        Source/PluginProcessor.h
        Source/PluginEditor.h
        Source/RiveRenderer.h
)

target_include_directories(RIVE4JUCE
        PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/Source
        ${RIVE_CPP_INCLUDE_DIR}
        ${RIVE_RENDERER_INCLUDE_DIR}
        ${RIVE_RENDERER_SRC_DIR}
)

target_compile_definitions(RIVE4JUCE
        PRIVATE
        JUCE_VST3_CAN_REPLACE_VST2=0
        JUCE_DISPLAY_SPLASH_SCREEN=0
)

target_link_libraries(RIVE4JUCE
        PRIVATE
        juce::juce_audio_utils
        juce::juce_opengl
        juce::juce_audio_plugin_client
        rive_static
        PUBLIC
        juce::juce_recommended_config_flags
        juce::juce_recommended_lto_flags
)
